--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-wrap-balancer": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
