--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.0.1",
     "classnames": "^2.3.2",
-    "next": "^13.3.0",
+    "next": "13.3.0",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
